fixed responsive issue on safari

--- a/components/UI/Elements/Form/Selects.module.scss
+++ b/components/UI/Elements/Form/Selects.module.scss
@@ -14,6 +14,7 @@
             width: 100%;
             background: transparent;
             outline: none;
+            appearance: none;
             border: none;
             border-bottom: 1px solid var(--darkThemeBoulder);
             padding: 1.5rem 0;
